#384: 2.0.1 API imports org.eclipse.jsonp by OSGi headers
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>